[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Beach/Characters/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Transitions/BoxInAndOut.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Covidiot.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Encounter/Encounter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Beach/Beach.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 139.302, 31.2944 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 215.868, 21.2995 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 41.3401

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 66.7436, 67.0394 )

[node name="Beach" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 192.696, 562.355 )
collision_mask = 10
speed = 600
jump_strength = 1000
fall_strength = 900

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 608.764, -197.713 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.0
drag_margin_top = 0.7
drag_margin_right = 0.5
drag_margin_bottom = 0.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 602.32, 980.554 )
scale = Vector2( 5.788, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1214.77, 622.704 )
shape = SubResource( 2 )
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -0.777954
margin_top = 951.0
margin_right = 1408.22
margin_bottom = 1016.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 1013.75
margin_top = 601.277
margin_right = 1421.75
margin_bottom = 666.277
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Encounter" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false

[node name="Transition" parent="CanvasLayer" instance=ExtResource( 2 )]
z_index = 99

[node name="DummyEnemy" type="KinematicBody2D" parent="."]
position = Vector2( 692.271, 681.673 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="DummyEnemy"]
margin_right = 118.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DummyEnemy"]
position = Vector2( 56.2153, 151.181 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="DummyEnemy"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DummyEnemy/Area2D"]
position = Vector2( 57.4349, 79.7708 )
shape = SubResource( 4 )
[connection signal="ready_for_encounter" from="Player" to="CanvasLayer/Transition" method="blank"]
[connection signal="encounter_finished" from="CanvasLayer/Encounter" to="." method="_on_encounter_finished"]
[connection signal="encounter_setup" from="CanvasLayer/Encounter" to="CanvasLayer/Transition" method="unblank"]
[connection signal="blanked" from="CanvasLayer/Transition" to="CanvasLayer/Encounter" method="_on_transition_blanked"]
[connection signal="blanked" from="CanvasLayer/Transition" to="." method="_on_transition_blanked"]
[connection signal="unblanked" from="CanvasLayer/Transition" to="CanvasLayer/Encounter" method="_on_transition_unblanked"]
[connection signal="unblanked" from="CanvasLayer/Transition" to="." method="_on_transition_unblanked"]
[connection signal="found_player" from="DummyEnemy" to="Player" method="_on_enemy_found_player"]
[connection signal="body_entered" from="DummyEnemy/Area2D" to="DummyEnemy" method="_on_Area2D_body_entered"]
